--- a/result/2022-06-25.md
+++ b/result/2022-06-25.md
@@ -41,3 +41,4 @@
 41. [女子收到好友还款竟是练功钞](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E6%94%B6%E5%88%B0%E5%A5%BD%E5%8F%8B%E8%BF%98%E6%AC%BE%E7%AB%9F%E6%98%AF%E7%BB%83%E5%8A%9F%E9%92%9E%23&Refer=top) 95212
 42. [中国如何保护耕地](https://s.weibo.com//weibo?q=%E4%B8%AD%E5%9B%BD%E5%A6%82%E4%BD%95%E4%BF%9D%E6%8A%A4%E8%80%95%E5%9C%B0&Refer=top) 87965
 43. [毕业ing](https://s.weibo.com//weibo?q=%E6%AF%95%E4%B8%9Aing&Refer=top) 23952
+44. [2022河南高考理科一本分数线509](https://s.weibo.com//weibo?q=%232022%E6%B2%B3%E5%8D%97%E9%AB%98%E8%80%83%E7%90%86%E7%A7%91%E4%B8%80%E6%9C%AC%E5%88%86%E6%95%B0%E7%BA%BF509%23&Refer=top) 11415
