--- a/result/2022-06-27.md
+++ b/result/2022-06-27.md
@@ -38,3 +38,4 @@
 38. [算是把儿童乐器玩明白了](https://s.weibo.com//weibo?q=%23%E7%AE%97%E6%98%AF%E6%8A%8A%E5%84%BF%E7%AB%A5%E4%B9%90%E5%99%A8%E7%8E%A9%E6%98%8E%E7%99%BD%E4%BA%86%23&Refer=top) 81109
 39. [交警中暑晕倒老板抱进店里喂水](https://s.weibo.com//weibo?q=%23%E4%BA%A4%E8%AD%A6%E4%B8%AD%E6%9A%91%E6%99%95%E5%80%92%E8%80%81%E6%9D%BF%E6%8A%B1%E8%BF%9B%E5%BA%97%E9%87%8C%E5%96%82%E6%B0%B4%23&Refer=top) 74311
 40. [王宗源曹缘动作是复制粘贴吧](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E5%AE%97%E6%BA%90%E6%9B%B9%E7%BC%98%E5%8A%A8%E4%BD%9C%E6%98%AF%E5%A4%8D%E5%88%B6%E7%B2%98%E8%B4%B4%E5%90%A7%23&Refer=top) 11719
+41. [济南大暴雨天气来袭](https://s.weibo.com//weibo?q=%23%E6%B5%8E%E5%8D%97%E5%A4%A7%E6%9A%B4%E9%9B%A8%E5%A4%A9%E6%B0%94%E6%9D%A5%E8%A2%AD%23&Refer=top) 7895
